[package]
name = "smsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.12.2", features = ["macros"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
openssl = { version = "0.10.64", features = ["vendored"] }
lazy_static = "1"
chrono = "0.4"

[build]
target = "armv7-unknown-linux-musleabihf"

[profile.release]
strip = true